--- a/index.html
+++ b/index.html
@@ -9,92 +9,91 @@
     <script src="https://kit.fontawesome.com/694efd35c6.js" crossorigin="anonymous"></script> <!--FuenteIconos-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/estilos/estilos.css"><!--Importante SIEMPRE al final del css de Bootstrap-->
+    <link rel="stylesheet" href="css/estilos.css"><!--Importante SIEMPRE al final del css de Bootstrap-->
 </head>
 
-<body id="hero"><!--Procedo desde aquí con un commit-->
-    <section class="row d-flex justify-content-center">
-        <!-- Este section abarca todo el body, de ahi seccionare en tres partes-->
-        <nav class="col-12 navbar navbar-expand-lg bg-primary text-white navbar-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Daft Punk</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/paginas/conciertos.html">Conciertos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/paginas/discografia.html">Discografia</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/paginas/galeria.html">Galeria</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/paginas/contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
+<body class="row d-flex justify-content-center"><!--secciono en tres partes-->
+    <!--secciono en tres partes-->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand p-2" href="index.html">Daft Punk</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/paginas/conciertos.html">Conciertos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/paginas/discografia.html">Discografia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/paginas/galeria.html">Galeria</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/paginas/contacto.html">Contacto</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
 
 
-        <section class="col-8">
+    <section class="container sectionLogo col-xl-6 col-md-8 col-xs-10">
 
-            <div class="imagenLogo d-flex justify-content-center p-3 ">
-                <img src="/img/daft-punk-logo.png" class="img-fluid" alt="logo daft punk">
-            </div>
+        <div class="imagenLogo d-flex justify-content-center p-3">
+            <img src="/img/daft-punk-logo.png" class="img-fluid" alt="logo daft punk">
+        </div>
 
-            <div class="d-flex text-lg-center p-5 text-center">
-                <p class="text-light h5">
-                    Daft Punk es un dúo de música electrónica formado por los músicos franceses Guy-Manuel de
-                    Homem-Christo
-                    (n. 1974) y Thomas Bangalter (n. 1975). Daft Punk alcanzó una gran popularidad en el estilo house a
-                    finales de la década delos '90, en Francia y continuó con su éxito los años siguientes, usando el
-                    estilo
-                    synthpop. El dúo también es acreditado por la producción de canciones que se consideran esenciales
-                    en el
-                    estilo french house.
-                    El acrónimo "Daft", presente en su primer DVD, proviene de las iniciales de "A Story about Dogs,
-                    Androids, Firemen and Tomatoes". Estas palabras reciben significado al dúo musical por su primera
-                    canción, «Da Funk» de 1995 perteneciente al álbum Homework, dónde aparece un perro antropomorfo
-                    ("Dogs")
-                    como protagonista en el vídeo. Luego "Androids" por la aparición de robots bailando en el vídeo
-                    «Around
-                    the World» de 1997 del álbum Homework. "Fireman" (Bombero en español) que aparecen en el video de
-                    «Burnin'» y "Tomatoes" por el vídeo «Revolution 909».
-                </p>
-            </div>
-            <div class="miniImg d-flex justify-content-center mb-3">
-                <img src="/img/getLucky.png" class="img-fluid" alt="logo daft punk">
-            </div>
+        <div class="d-flex text-lg-center p-5">
+            <p class="h5">
+                Daft Punk es un dúo de música electrónica formado por los músicos franceses Guy-Manuel de
+                Homem-Christo
+                (n. 1974) y Thomas Bangalter (n. 1975). Daft Punk alcanzó una gran popularidad en el estilo house a
+                finales de la década delos '90, en Francia y continuó con su éxito los años siguientes, usando el
+                estilo
+                synthpop. El dúo también es acreditado por la producción de canciones que se consideran esenciales
+                en el
+                estilo french house.
+                El acrónimo "Daft", presente en su primer DVD, proviene de las iniciales de "A Story about Dogs,
+                Androids, Firemen and Tomatoes". Estas palabras reciben significado al dúo musical por su primera
+                canción, «Da Funk» de 1995 perteneciente al álbum Homework, dónde aparece un perro antropomorfo
+                ("Dogs")
+                como protagonista en el vídeo. Luego "Androids" por la aparición de robots bailando en el vídeo
+                «Around
+                the World» de 1997 del álbum Homework. "Fireman" (Bombero en español) que aparecen en el video de
+                «Burnin'» y "Tomatoes" por el vídeo «Revolution 909».
+            </p>
+        </div>
+        <div class="d-flex justify-content-center mb-3">
+            <img src="/img/getLucky.png" class="img-fluid" alt="logo daft punk">
+        </div>
 
-        </section>
-
-        <section class="col-12">
-            <footer>
-                <div class="iconoRedes text-center p-3">
-                    <a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi"><i
-                            class="fa-brands fa-spotify"></i></a>
-                    <a href="https://www.coderhouse.com/"><i class="fa-solid fa-graduation-cap"></i></a>
-                    <a href="https://www.youtube.com/channel/UCeFRG6700bzqYI0M_9vyelw/videos"><i
-                            class="fa-brands fa-youtube"></i></a>
-                </div>
-                <!-- Copyright -->
-                <div class="text-center text-white p-3 border-2 bottom-0" style="background-color: rgb(36, 57, 163)" ;>
-                    © 2022 Copyright: Sitio sin fines de lucro por
-                    <a class="text-light" href="https://www.coderhouse.com/">Lucas J Vargas</a>
-                </div>
-                <!-- Copyright -->
-            </footer>
-        </section>
     </section>
+
+    <section>
+        <footer>
+            <div class="text-center p-3">
+                <a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi"><i
+                        class="fa-brands fa-spotify"></i></a>
+                <a href="https://www.coderhouse.com/"><i class="fa-solid fa-graduation-cap"></i></a>
+                <a href="https://www.youtube.com/channel/UCeFRG6700bzqYI0M_9vyelw/videos"><i
+                        class="fa-brands fa-youtube"></i></a>
+            </div>
+            <!-- Copyright -->
+            <div class="text-center p-3 border-2 bottom-0";">
+                © 2022 Copyright:
+                <a href="https://www.coderhouse.com/">Lucas J Vargas</a>
+            </div>
+            <!-- Copyright -->
+        </footer>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
