--- a/paginas/conciertos.html
+++ b/paginas/conciertos.html
@@ -9,15 +9,15 @@
     <script src="https://kit.fontawesome.com/694efd35c6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/estilos/estilos.css">
+    <link rel="stylesheet" href="/css/estilos.css">
 </head>
 
 <body>
 
     <section class="row d-flex justify-content-center">
-        <nav class="col-12 navbar navbar-expand-lg bg-primary bg-gradient navbar-dark">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Daft Punk</a>
+                <a class="navbar-brand p-2" href="#">Daft Punk</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
             </div>
         </nav>
 
-        <section class="col-8">
+        <section class="col-xl-6 col-md-8 col-xs-10">
             <div class="container h4 text-light text-center p-5">
                 <h2>Tour Mundial 2023</h2>
                 <p>Enterate de los nuevos conciertos:</p>
@@ -122,9 +122,9 @@
             </div>
         </section>
 
-        <section class="col-12">
+        <section>
             <footer>
-                <div class="iconoRedes text-center p-3">
+                <div class="text-center p-3">
                     <a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi"><i
                             class="fa-brands fa-spotify"></i></a>
                     <a href="https://www.coderhouse.com/"><i class="fa-solid fa-graduation-cap"></i></a>
@@ -132,9 +132,9 @@
                             class="fa-brands fa-youtube"></i></a>
                 </div>
                 <!-- Copyright -->
-                <div class="text-center text-white p-3 border-2 bottom-0" style="background-color: rgb(36, 57, 163);">
+                <div class="text-center p-3 border-2 bottom-0";">
                     © 2022 Copyright:
-                    <a class="text-white" href="https://www.coderhouse.com/">Lucas J Vargas</a>
+                    <a href="https://www.coderhouse.com/">Lucas J Vargas</a>
                 </div>
                 <!-- Copyright -->
             </footer>
