--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -9,14 +9,14 @@
     <script src="https://kit.fontawesome.com/694efd35c6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/estilos/estilos.css">
+    <link rel="stylesheet" href="/css/estilos.css">
 </head>
 
 <body>
-    <section class="row ">
-        <nav class="col-12 navbar navbar-expand-lg bg-primary navbar-dark">
+    <section class="row">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Daft Punk</a>
+                <a class="navbar-brand p-2" href="#">Daft Punk</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -86,11 +86,12 @@
 
                         <div class="container text-center col-xl-6 col-md-8 col-xs-10 h3 ">
                             <p class="p-4">Encuentranos en:</p>
-                           <div class="">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7858.137907643805!2d-59.02952006493742!3d-34.09667752322532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb0b6886fb22e9%3A0xe2b7335180abf4c1!2sPlaza%20Mitre!5e0!3m2!1ses-419!2sar!4v1672062707810!5m2!1ses-419!2sar"
-                                class="embed-responsive-item" width="300" height="300" style="border:0;"
-                                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade "></iframe>
+                            <div class="">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7858.137907643805!2d-59.02952006493742!3d-34.09667752322532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb0b6886fb22e9%3A0xe2b7335180abf4c1!2sPlaza%20Mitre!5e0!3m2!1ses-419!2sar!4v1672062707810!5m2!1ses-419!2sar"
+                                    class="embed-responsive-item" width="300" height="300" style="border:0;"
+                                    allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade "></iframe>
                             </div>
                         </div>
 
@@ -98,9 +99,9 @@
             </section>
         </section>
 
-        <section class="col-12">
+        <section>
             <footer>
-                <div class="iconoRedes text-center p-3">
+                <div class="text-center p-3">
                     <a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi"><i
                             class="fa-brands fa-spotify"></i></a>
                     <a href="https://www.coderhouse.com/"><i class="fa-solid fa-graduation-cap"></i></a>
@@ -108,9 +109,9 @@
                             class="fa-brands fa-youtube"></i></a>
                 </div>
                 <!-- Copyright -->
-                <div class="text-center text-white p-3 border-2 bottom-0" style="background-color: rgb(36, 57, 163);">
+                <div class="text-center p-3 border-2 bottom-0";">
                     © 2022 Copyright:
-                    <a class="text-white" href="https://www.coderhouse.com/">Lucas J Vargas</a>
+                    <a href="https://www.coderhouse.com/">Lucas J Vargas</a>
                 </div>
                 <!-- Copyright -->
             </footer>
