--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -9,15 +9,15 @@
     <script src="https://kit.fontawesome.com/694efd35c6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/estilos/estilos.css">
+    <link rel="stylesheet" href="/css/estilos.css">
 
 </head>
 
 <body>
     <section class="row d-flex justify-content-center">
-        <nav class="col-12 navbar navbar-expand-lg bg-primary navbar-dark">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Daft Punk</a>
+                <a class="navbar-brand p-2" href="#">Daft Punk</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -44,20 +44,21 @@
             </div>
         </nav>
 
-        <section class="container-fluid col-10">
-            <div class="row mt-4 gap-4 gap-md-0">
+        <section class="container-fluid col-10 imgGaleria">
+
+            <div class="row mt-4 gap-3 gap-md-0">
                 <img class="img-fluid col-md-4 " src="/img/daft-punk-gallery0.jpg" alt="daft-punk-gallery00">
                 <img class="img-fluid col-md-4" src="/img/daft-punk-gallery1.jpg" alt="daft-punk-gallery01">
                 <img class="img-fluid col-md-4" src="/img/daft-punk-gallery2.jpg" alt="daft-punk-gallery02">
             </div>
 
-            <div class="row mt-4 gap-4 gap-md-0">
+            <div class="row mt-4 gap-3 gap-md-0">
                 <img class="img-fluid col-md-4" src="/img/daft-punk-gallery3.jpg" alt="daft-punk-gallery03">
                 <img class="img-fluid col-md-4" src="/img/daft-punk-gallery4.jpg" alt="daft-punk-gallery04">
                 <img class="img-fluid col-md-4" src="/img/daft-punk-gallery5.jpg" alt="daft-punk-gallery05">
             </div>
 
-            <div class="row mt-4 gap-4 gap-md-0 mb-4">
+            <div class="row mt-4 gap-3 gap-md-0 mb-4">
                 <img class="img-fluid col-md-4" src="/img/daft-punk-gallery6.jpg" alt="daft-punk-gallery06">
                 <img class="img-fluid col-md-4" src="/img/daft-punk-gallery7.jpg" alt="daft-punk-gallery07">
                 <img class="img-fluid col-md-4" src="/img/daft-punk-gallery8.jpg" alt="daft-punk-gallery08">
@@ -65,9 +66,9 @@
 
         </section>
 
-        <section class="col-12">
+        <section>
             <footer>
-                <div class="iconoRedes text-center p-3">
+                <div class="text-center p-3">
                     <a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi"><i
                             class="fa-brands fa-spotify"></i></a>
                     <a href="https://www.coderhouse.com/"><i class="fa-solid fa-graduation-cap"></i></a>
@@ -75,9 +76,9 @@
                             class="fa-brands fa-youtube"></i></a>
                 </div>
                 <!-- Copyright -->
-                <div class="text-center text-white p-3 border-2 bottom-0" style="background-color: rgb(36, 57, 163);">
+                <div class="text-center p-3 border-2 bottom-0";">
                     © 2022 Copyright:
-                    <a class="text-white" href="https://www.coderhouse.com/">Lucas J Vargas</a>
+                    <a href="https://www.coderhouse.com/">Lucas J Vargas</a>
                 </div>
                 <!-- Copyright -->
             </footer>
