--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daft Punk - Inicio</title>
+    <meta name="description"
+        content="Escucha música de Daft Punk. Encuentra los conciertos, álbumes e imágenes más recientes">
+<meta name="keywords" content="Daft Punk, Discovery, Ramdom Access Memories, Alive 2007, Homework, Tron: Legacy, Human After  All">
     <script src="https://kit.fontawesome.com/694efd35c6.js" crossorigin="anonymous"></script> <!--FuenteIconos-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -14,7 +17,7 @@
 </head>
 
 <body class="row d-flex justify-content-center"><!--secciono en tres partes-->
-    <!--secciono en tres partes-->
+
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand p-2" href="index.html">Daft Punk</a>
