--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daft Punk - Galeria</title>
+    <meta name="description"
+    content="Encuentra las imágenes de Daft Punk más recientes">
+    <meta name="keywords" content="Daft Punk, Discovery, Ramdom Access Memories, Alive 2007, Homework, Tron: Legacy, Human After  All">
     <script src="https://kit.fontawesome.com/694efd35c6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
