--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Daft Punk - Inicio</title>
     <meta name="description"
         content="Escucha música de Daft Punk. Encuentra los conciertos, álbumes e imágenes más recientes">
-<meta name="keywords" content="Daft Punk, Discovery, Ramdom Access Memories, Alive 2007, Homework, Tron: Legacy, Human After  All">
+    <meta name="keywords"
+        content="Daft Punk, Discovery, Ramdom Access Memories, Alive 2007, Homework, Tron: Legacy, Human After  All">
     <script src="https://kit.fontawesome.com/694efd35c6.js" crossorigin="anonymous"></script> <!--FuenteIconos-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
