--- a/paginas/conciertos.html
+++ b/paginas/conciertos.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daft Punk - Conciertos</title>
-    <meta name="description"
-    content="Encuentra los conciertos más recientes de Daft Punk">
-    <meta name="keywords" content="Daft Punk, Discovery, Ramdom Access Memories, Alive 2007, Homework, Tron: Legacy, Human After  All">
+    <meta name="description" content="Encuentra los conciertos más recientes de Daft Punk">
+    <meta name="keywords"
+        content="Daft Punk, Discovery, Ramdom Access Memories, Alive 2007, Homework, Tron: Legacy, Human After  All">
     <script src="https://kit.fontawesome.com/694efd35c6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -53,7 +53,7 @@
                 <h2>Tour Mundial 2023</h2>
             </div>
             <div class="container text-light text-center p-2">
-                                <div>
+                <div>
                     <h4 class="animate__animated animate__bounce">Enterate de los nuevos conciertos</h4>
                 </div>
                 <div>
